force-app/main/default/objects/Opportunity/fields/Commercial_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Exposure__c</fullName>
    <label>Commercial Exposure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completing agreed deliverables</fullName>
            </value>
            <value>
                <fullName>Usage &amp; adoption</fullName>
            </value>
            <value>
                <fullName>Solution drives value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>