force-app/main/default/objects/Opportunity/fields/Commercial_Model__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Model__c</fullName>
    <label>Commercial Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price (Including Outcome Pricing)</fullName>
            </value>
            <value>
                <fullName>Managed Capacity (Retainer/Fixed Capacity, including Fixed Billing)</fullName>
            </value>
            <value>
                <fullName>Time And meterials (Including T&amp;M With Cap)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>