force-app/main/default/objects/Opportunity/fields/Commercial_Model_Base_Model__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Model_Base_Model__c</fullName>
    <label>Commercial Model Base Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Bid</fullName>
            </value>
            <value>
                <fullName>Fixed Bid + outcome-based KPIs</fullName>
            </value>
            <value>
                <fullName>Value-tied model</fullName>
            </value>
            <value>
                <fullName>Time &amp; Materials</fullName>
            </value>
            <value>
                <fullName>Time &amp; Materials + outcome-based KPIs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>