force-app/main/default/objects/Opportunity/fields/Commercial_Model_Billing_Structure__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Model_Billing_Structure__c</fullName>
    <label>Commercial Model Billing Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Bid</fullName>
            </value>
            <value>
                <fullName>Fixed Billing</fullName>
            </value>
            <value>
                <fullName>Time &amp; Materials</fullName>
            </value>
            <value>
                <fullName>Fixed Capacity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>