force-app/main/default/objects/Opportunity/fields/Commercial_Model_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Model_Rationale__c</fullName>
    <label>Commercial Model Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>