force-app/main/default/objects/Opportunity/fields/contract_Type__c.field-meta.xml
<CustomField>
    <fullName>contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Bid</fullName>
            </value>
            <value>
                <fullName>Pro Bono</fullName>
            </value>
            <value>
                <fullName>Time &amp; Meterials</fullName>
            </value>
            <value>
                <fullName>Fixed Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>